ch6/services/nginx-v1-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-version-one
  labels:
    run: nginx-version-one
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-version-one
