ch6/services/nginx-app-path-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-app
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: nginx-version-one
            port:
              number: 80
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: nginx-version-two
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-version-two
            port:
              number: 80
